--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/jf666666/jf666666.github.io
+  branch: main
