--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Github Pages
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - ".github/**"
       - ".vscode/**"
