--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ on:
       - "README.md"
   pull_request:
     branches:
-      - master
+      - main
     paths-ignore:
       - ".github/**"
       - ".vscode/**"
