--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -113,7 +113,7 @@ comments:
     repo: "jf666666/jf666666.github.io"
     repoID: "R_kgDOLpGWDQ"
     category: "Announcements"
-    categoryID: "DIC_kwDOJYr3ys4CbogO"
+    categoryID: "DIC_kwDOLpGWDc4CefO-"
     mapping: "pathname"
     lightTheme: "noborder_light"
     darkTheme: "noborder_gray"
